--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
     "workbench.iconTheme": "vscode-icons",
     "workbench.colorTheme": "Dracula Soft",
     "workbench.editor.enablePreview": true,
+    "workbench.sideBar.location": "right",
     "window.zoomLevel": 0.55,
     "security.workspace.trust.untrustedFiles": "open",
     "zenMode.hideLineNumbers": false,
@@ -15,6 +16,8 @@
     "editor.renderWhitespace": "all",
     "editor.renderFinalNewline": true,
     "editor.unicodeHighlight.nonBasicASCII": false,
+
+    "terminal.integrated.defaultProfile.linux": "zsh",
 
     "emmet.includeLanguages": {
         "php": "html",
