--- a/settings.json
+++ b/settings.json
@@ -16,6 +16,8 @@
     "editor.renderWhitespace": "all",
     "editor.renderFinalNewline": true,
     "editor.unicodeHighlight.nonBasicASCII": false,
+    "files.eol": "\n",
+    "files.insertFinalNewline": true,
 
     "terminal.integrated.defaultProfile.linux": "zsh",
 
