--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
-    "workbench.iconTheme": "vscode-icons",
     "workbench.colorTheme": "Dracula Soft",
     "workbench.editor.enablePreview": true,
     "workbench.sideBar.location": "right",
+    "workbench.iconTheme": "vscode-icons",
     "window.zoomLevel": 0.3,
     "security.workspace.trust.untrustedFiles": "open",
     "zenMode.hideLineNumbers": false,
@@ -12,7 +12,7 @@
     "editor.fontSize": 14,
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
-        "source.fixAll.eslint": true
+        "source.organizeImports": true
     },
     "editor.renderWhitespace": "all",
     "editor.renderFinalNewline": "on",
@@ -30,51 +30,12 @@
 
     "files.eol": "\n",
     "files.insertFinalNewline": true,
-    "files.associations": {
-        "*.inc": "php",
-        "*.module": "php",
-        "*.install": "php",
-        "*.theme": "php",
-        "*.profile": "php",
-        "*.tpl.php": "php",
-        "*.test": "php",
-        "*.php": "php",
-        "*.info": "ini"
-    },
     "files.trimTrailingWhitespace": true,
     "files.restoreUndoStack": false,
 
     "terminal.integrated.defaultProfile.linux": "zsh",
 
-    "emmet.includeLanguages": {
-        "php": "html",
-        "blade": "html",
-        "javascript": "javascriptreact",
-        "typescript": "typescriptreact"
-    },
     "[html]": {
         "editor.suggest.insertMode": "replace",
-        "editor.tabSize": 4
-    },
-    "[php]": {
-        "editor.tabSize": 2
-    },
-    "[javascript]": {
-        "editor.tabSize": 2
-    },
-    "[javascriptreact]": {
-        "editor.tabSize": 4
-    },
-    "[typescript]": {
-        "editor.tabSize": 2
-    },
-    "[typescriptreact]": {
-        "editor.tabSize": 4
-    },
-    "[json]": {
-        "editor.tabSize": 4
-    },
-    "[yaml]": {
-        "editor.tabSize": 2
     },
 }
