--- a/settings.json
+++ b/settings.json
@@ -1,13 +1,11 @@
 {
-    "workbench.colorTheme": "Dracula Soft",
     "workbench.editor.enablePreview": false,
     "workbench.sideBar.location": "right",
     "workbench.iconTheme": "vscode-icons",
+    "workbench.colorTheme": "Dracula Soft",
     "window.zoomLevel": 0.3,
-
     "security.workspace.trust.untrustedFiles": "open",
     "zenMode.hideLineNumbers": false,
-
     "editor.fontFamily": "'Fira Code'",
     "editor.fontLigatures": true,
     "editor.fontSize": 14,
@@ -29,27 +27,25 @@
     "editor.rulers": [
         80
     ],
-
+    "editor.cursorSurroundingLines": 10,
+    "editor.cursorSurroundingLinesStyle": "all",
     "diffEditor.ignoreTrimWhitespace": false,
-
     "files.eol": "\n",
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
-    "files.restoreUndoStack": false,
+    "files.restoreUndoStack": true,
     "terminal.integrated.defaultProfile.linux": "zsh",
-
     "emmet.includeLanguages": {
         "php": "html",
         "javascriptreact": "html",
-        "Javascript": "html"
+        "Javascript": "html",
     },
-
     "[html]": {
         "editor.suggest.insertMode": "replace",
         "editor.tabSize": 4
     },
     "[php]": {
-        "editor.tabSize": 4,
+        "editor.tabSize": 2,
     },
     "[yaml]": {
         "editor.tabSize": 2
@@ -66,4 +62,30 @@
     "[sass]": {
         "editor.tabSize": 2
     },
+    "vim.easymotion": true,
+    "vim.incsearch": true,
+    "vim.useSystemClipboard": true,
+    "vim.useCtrlKeys": true,
+    "vim.hlsearch": true,
+    "vim.smartRelativeLine": true,
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": [
+                "<esc>"
+            ],
+            "commands": [
+                ":nohl"
+            ]
+        },
+    ],
+    "vim.leader": "\\",
+    "vim.handleKeys": {
+        "<C-b>": false,
+        "<C-p>": false,
+        "<C-g>": false,
+    },
+    // To improve performance
+    "extensions.experimental.affinity": {
+        "vscodevim.vim": 1
+    }
 }
