--- a/settings.json
+++ b/settings.json
@@ -2,10 +2,11 @@
     "workbench.editor.enablePreview": false,
     "workbench.sideBar.location": "right",
     "workbench.iconTheme": "vscode-icons",
-    "workbench.colorTheme": "Dracula Soft",
+    "workbench.colorTheme": "Dracula Theme Soft",
     "window.zoomLevel": 0.3,
     "security.workspace.trust.untrustedFiles": "open",
     "zenMode.hideLineNumbers": false,
+    "explorer.compactFolders": false,
     "editor.fontFamily": "'Fira Code'",
     "editor.fontLigatures": true,
     "editor.fontSize": 14,
@@ -40,28 +41,6 @@
         "javascriptreact": "html",
         "Javascript": "html",
     },
-    "[html]": {
-        "editor.suggest.insertMode": "replace",
-        "editor.tabSize": 4
-    },
-    "[php]": {
-        "editor.tabSize": 2,
-    },
-    "[yaml]": {
-        "editor.tabSize": 2
-    },
-    "[yml]": {
-        "editor.tabSize": 2
-    },
-    "[css]": {
-        "editor.tabSize": 2
-    },
-    "[scss]": {
-        "editor.tabSize": 2
-    },
-    "[sass]": {
-        "editor.tabSize": 2
-    },
     "vim.easymotion": true,
     "vim.incsearch": true,
     "vim.useSystemClipboard": true,
@@ -87,5 +66,5 @@
     // To improve performance
     "extensions.experimental.affinity": {
         "vscodevim.vim": 1
-    }
+    },
 }
